# oidc-filter

./: .gitignore  Cargo.toml  Makefile  README.md  main.go
.github/workflows/: lint.yml  test.yml
container/: Dockerfile  manifest.yaml
example/: README.md  deploy.sh  envoyfilter.yaml  extension.yaml  extensions.maistra.io_servicemeshextensions.yaml  httpbin-gateway.yaml  httpbin.yaml  istio-auth.yaml  patched-clusterrole.yaml  setup-keycloak.sh  wasm-server.yaml
examples/: envoy.yaml
examples/envoy/: Dockerfile  README.md  deploy.sh  envoy.yaml  test.sh
examples/istio/: README.md  deploy.sh  envoyfilter.yaml  httpbin.yaml  istio-auth.yaml  istio-gateway.yaml  keycloak.yaml  test.sh  wasmplugin.yaml
src/: config.rs  constants.rs  errors.rs  lib.rs
src/main/: main.go  util.go
