[package]
name = "oidc-filter"
version = "0.1.0"
authors = ["Daniel Grimm <dgrimm@redhat.com>"]
edition = "2021"

[dependencies]
proxy-wasm = "0.2.1"
log = "0.4.17"
url = "2.3.1"
serde = { version = "1.0.145", features = ["derive"] }
serde_json = "1.0.86"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true
