[package]
publish = false
name = "oidc-filter"
version = "0.2.0"
authors = ["Daniel Grimm <dgrimm@redhat.com>"]
edition = "2024"

[dependencies]
proxy-wasm = "0.2.3"
log = "0.4.27"
url = "2.5.7"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true
