[package]
publish = false
name = "oidc-filter"
version = "0.2.0"
authors = ["Daniel Grimm <dgrimm@redhat.com>"]
edition = "2024"

[dependencies]
proxy-wasm = "0.2.4"
log = "0.4.28"
url = "2.5.7"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

[lib]
crate-type = ["cdylib"]
path = "src/lib.rs"

[profile.release]
lto = true
